# backend/internal/data/ent/schema/changelog.go
@@ -1,0 +1,50 @@
+package schema
+
+import (
+	"entgo.io/ent"
+	"entgo.io/ent/dialect/entsql"
+	"entgo.io/ent/schema/edge"
+	"entgo.io/ent/schema/field"
+	"entgo.io/ent/schema/index"
+	"github.com/google/uuid"
+	"github.com/sysadminsmedia/homebox/backend/internal/data/ent/schema/mixins"
+)
+
+// Changelog holds the schema definition for changelog entries linked to an entity.
+type Changelog struct {
+	ent.Schema
+}
+
+func (Changelog) Mixin() []ent.Mixin {
+	return []ent.Mixin{
+		mixins.BaseMixin{},
+	}
+}
+
+func (Changelog) Fields() []ent.Field {
+	return []ent.Field{
+		field.UUID("entity_id", uuid.UUID{}),
+		field.String("summary").
+			MaxLen(500).
+			NotEmpty(),
+	}
+}
+
+func (Changelog) Edges() []ent.Edge {
+	return []ent.Edge{
+		edge.From("entity", Entity.Type).
+			Field("entity_id").
+			Ref("changelog_entries").
+			Required().
+			Unique().
+			Annotations(entsql.Annotation{
+				OnDelete: entsql.Cascade,
+			}),
+	}
+}
+
+func (Changelog) Indexes() []ent.Index {
+	return []ent.Index{
+		index.Fields("entity_id"),
+	}
+}
